[package]
authors = ["Krishan Wyse <kwysek@gmail.com>"]
build = "build.rs"
name = "hub"
version = "0.1.0"

[build-dependencies]

[build-dependencies.diesel]
features = ["postgres"]
version = "0.14.1"

[dependencies]
clippy = { version = "0.0.144", optional = true }
r2d2 = "0.7.3"
r2d2-diesel = "0.14.0"
regex = "0.2.2"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0.10"
serde_derive = "1.0.10"
slog = "2.0.6"
slog-async = "2.0.1"
slog-term = "2.0.2"

[dependencies.config]
git = "https://github.com/mehcode/config-rs"

[dependencies.diesel]
features = ["postgres"]
version = "0.14.1"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.14.0"

[features]
default = []
